objects/Residential_Project__c.object
<CustomObject>
    <fields>
        <fullName>Lot_Number__c</fullName>
        <description>Residential Installation Project Management
Pat Hevrdejs
Lot Number in Community</description>
        <label>Lot Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Main_Breaker_Location__c</fullName>
        <description>Project Name: Residential Installation Management
Requester: Priti Rastogi
This field is manually populated by an EC or Site Surveyor to communicate site specific details that the installation team needs to know in preparation for starting and completing a system installation at a homeowner&apos;s site.</description>
        <label>Main Breaker Location</label>
        <picklist>
            <picklistValues>
                <fullName>Top</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bottom</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Center</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Main Breaker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Main_Breaker_Rating_Amps__c</fullName>
        <description>Project Name: Residential Installation Management
Requester: Priti Rastogi
This field is manually populated by an EC or Site Surveyor to communicate site specific details that the installation team needs to know in preparation for starting and completing a system installation at a homeowner&apos;s site.</description>
        <label>Main Breaker Rating (Amps)</label>
        <picklist>
            <picklistValues>
                <fullName>100</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>125</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>150</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>200</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>225</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>300</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>400</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Main_Service_Panel_Location__c</fullName>
        <description>Project Name: Residential Installation Management
Requester: Priti Rastogi
This field is manually populated by an EC or Site Surveyor to communicate site specific details that the installation team needs to know in preparation for starting and completing a system installation at a homeowner&apos;s site.</description>
        <label>Main Service Panel Location</label>
        <picklist>
            <picklistValues>
                <fullName>Exterior Wall</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inside Garage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Equipment Room</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Main_Service_Panel_Manufacturer__c</fullName>
        <description>Project Name: Residential Installation Management
Requester: Priti Rastogi
This field is manually populated by an EC or Site Surveyor to communicate site specific details that the installation team needs to know in preparation for starting and completing a system installation at a homeowner&apos;s site.</description>
        <label>Main Service Panel Manufacturer</label>
        <picklist>
            <picklistValues>
                <fullName>Bryant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Challenger</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Eaton/Cutler Hammer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Murray</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Siemens</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Square D</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Westinghouse</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DQ - Federal Pacific Energy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DQ - Pushmatic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DQ - Zinsco/Sylvania</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Material_Delivery_Date__c</fullName>
        <description>Requested by New Homes. Ordering #149608883</description>
        <label>Material Delivery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Material_Shipped_Date__c</fullName>
        <description>Residential Installation Project Management
Pat Hevrdejs
Material Shipped Date set manually</description>
        <label>Material Shipped Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Materials_Ship_to_Location__c</fullName>
        <label>Materials Ship-to Location</label>
        <picklist>
            <picklistValues>
                <fullName>Warehouse</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Job Site</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Max_Order__c</fullName>
        <description>Project Installation Mgmt
This field is the highest Order for a related critical path task. This field is used to validate that critical order tasks do not get out of order.</description>
        <label>Max Order</label>
        <summarizedField>Project_Task__c.Order__c</summarizedField>
        <summaryFilterItems>
            <field>Project_Task__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Task Template</value>
        </summaryFilterItems>
        <summaryForeignKey>Project_Task__c.Residential_Project__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Meter_Combiners__c</fullName>
        <description>Residential Installation Project Mgmt
Priti Rastogi
A TPS NY and NJ Field</description>
        <label>Meter Combiners (NY &amp; NJ)</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Module_Brand__c</fullName>
        <description>Project Name: Residential Installation Management
Requester: Priti Rastogi
This formula field is populated from the quote record at the time of project record creation.
This field communicates critical details about the system equipment being installed for the project.</description>
        <formula>Quote__r.Module_Brand__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Module Brand</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Module_Configuration__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This lookup is used to link the project to a module so that PO Lines can be created accurately</description>
        <label>Module Configuration</label>
        <referenceTo>Module_Configuration__c</referenceTo>
        <relationshipLabel>Residential Projects</relationshipLabel>
        <relationshipName>Residential_Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Module_Quantity__c</fullName>
        <description>Project Name: Residential Installation Management
Requester: Priti Rastogi
This formula field is populated from the quote record at the time of project record creation.
This field communicates critical details about the system equipment being installed for the project.</description>
        <formula>Quote__r.Module_Quantity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Module Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Module_Type__c</fullName>
        <description>Project Name: Residential Installation Management
Requester: Priti Rastogi
This formula field is populated from the quote record at the time of project record creation.
This field communicates critical details about the system equipment being installed for the project.</description>
        <formula>TEXT( Quote__r.System_Model__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Module Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MonitoringIncluded__c</fullName>
        <description>When this field is checked, the Monitoring item that&apos;s part of the Inverter configuration will be added to the PO Lines when a new PO is created.</description>
        <label>Monitoring?</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Monitoring_System__c</fullName>
        <description>Project Name: Residential Installation Management
Requester: Priti Rastogi
This formula field is populated from the quote record at the time of project record creation.
This field communicates critical details about the system equipment being installed for the project.</description>
        <formula>TEXT(Quote__r.Monitoring_System__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Monitoring System</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Monitoring__c</fullName>
        <description>Residential Installation Project Management
Pat Hevrdejs</description>
        <label>Monitoring</label>
        <picklist>
            <picklistValues>
                <fullName>Production Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Production &amp; Consumption</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Production &amp; Consumption (Multi CT)</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Mounting_System__c</fullName>
        <description>Project Name: Residential Installation Management 
Requester: Priti Rastogi 
This field pulls the Mounting Description field from the Quote.</description>
        <formula>TEXT(Quote__r.Mounting_Description__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mounting System</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mounting_Type__c</fullName>
        <description>Residential Installation Project Management
Pat Hevrdejs</description>
        <label>Mounting Type</label>
        <picklist>
            <picklistValues>
                <fullName>Invisimount - SunModo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Invisimount - SunModo - Deck</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Invisimount - Inset - SunModo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Invisimount - Inset - SunModo - Deck</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Invisimount - Over Tile - QuickHook (Standard Height)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Invisimount - Over Tile - QuickHook (Low Height)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Invisimount - Over Tile - Stanchion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Invisimount - Flat Roof - Stanchion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Invisimount - Metal Roof - S5 Mini</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SunPower Smart Mount</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UniRac Solar Mount</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>InvisiMount</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SolarMount</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Invisimount – Flat Roof – Stanchion</fullName>
                <isActive>false</isActive>
            </picklistValues>
            <picklistValues>
                <fullName>Invisimount – Inset - SunModo</fullName>
                <isActive>false</isActive>
            </picklistValues>
            <picklistValues>
                <fullName>Invisimount – Inset – SunModo - Deck</fullName>
                <isActive>false</isActive>
            </picklistValues>
            <picklistValues>
                <fullName>Invisimount – Metal Roof – S5 Mini</fullName>
                <isActive>false</isActive>
            </picklistValues>
            <picklistValues>
                <fullName>Invisimount – Over Tile – QuickHook (Low Height)</fullName>
                <isActive>false</isActive>
            </picklistValues>
            <picklistValues>
                <fullName>Invisimount – Over Tile – QuickHook (Standard Height)</fullName>
                <isActive>false</isActive>
            </picklistValues>
            <picklistValues>
                <fullName>Invisimount – Over Tile – Stanchion</fullName>
                <isActive>false</isActive>
            </picklistValues>
            <picklistValues>
                <fullName>Invisimount – SunModo</fullName>
                <isActive>false</isActive>
            </picklistValues>
            <picklistValues>
                <fullName>Invisimount – SunModo – Deck</fullName>
                <isActive>false</isActive>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Multi_Level_Home__c</fullName>
        <description>Project Name: Residential Installation Management
Requester: Priti Rastogi
This is pick list field is manually populated by the EC and communicates specific site conditions that the operations team needs to know as the plan for an complete and installation job.</description>
        <label>Multi Level Home</label>
        <picklist>
            <picklistValues>
                <fullName>Single</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Two Story</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Three Story</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Number_of_Panels__c</fullName>
        <description>Residential Installation Project Management
Pat Hevrdejs</description>
        <label>Number of Panels</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OppTeamComplete__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When the Partner Account has been filled in the final Alliance Partner record, the Opportunity Team should be complete and the Installation Model can be populated on the Quote. (Workaround for Installation Model validation on Quote)</description>
        <label>OppTeamComplete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opportunity_Owner_Email__c</fullName>
        <description>The Opportunity Owner Email field auto-populated by process builder task &apos;PM - Install Scheduled Notification&apos;</description>
        <inlineHelpText>Auto-populated from opportunity owner when &apos;Homeowner Scheduled Installation Date&apos; is updated</inlineHelpText>
        <label>Opportunity Owner Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Project Name: Residential Installation Management
Requester: Priti Rastogi
This look up field is automatically populated from the opportunity record upon project record creation.</description>
        <label>Opportunity</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Account__c</field>
                <operation>equals</operation>
                <valueField>Opportunity.Account.Id</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Residential Projects</relationshipLabel>
        <relationshipName>Residential_Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OracleOrderHeaderId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>This is the unique sales order Id (row Id) in Oracle and is used to update the Material Shipment date on the project.</description>
        <externalId>true</externalId>
        <label>Oracle Order Header Id</label>
        <length>38</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Other_Main_Breaker_Location__c</fullName>
        <description>Project Name: Residential Installation Management
Requester: Priti Rastogi
This field is manually populated by an EC or Site Surveyor to communicate site specific details that the installation team needs to know in preparation for starting completing a system installation at a homeowner&apos;s site.
Required if Main Breaker Location is equal to Other</description>
        <label>Other Main Breaker Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Main_Service_Panel_Location__c</fullName>
        <description>Project Name: Residential Installation Management
Requester: Priti Rastogi
This field is manually populated by an EC or Site Surveyor to communicate site specific details that the installation team needs to know in preparation for starting completing a system installation at a homeowner&apos;s site.
Required if Main Service Panel Location is equal to Other</description>
        <label>Other Main Service Panel Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Main_Service_Panel_Manufacturer__c</fullName>
        <description>Project Name: Residential Installation Management
Requester: Priti Rastogi
This field is manually populated by an EC or Site Surveyor to communicate site specific details that the installation team needs to know in preparation for starting completing a system installation at a homeowner&apos;s site.</description>
        <label>Other Main Service Panel Manufacturer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PDF_Copy_Only__c</fullName>
        <description>Residential Installation Project Management
Pat Hevrdejs</description>
        <label>PDF Copy Only</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PTA_Bldg_Inspection_Date__c</fullName>
        <label>PTA Bldg Inspection Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PV_Id__c</fullName>
        <description>Residential Installation Project Management
Pat Hevrdejs</description>
        <label>PV Id #</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PV_Install_Promised__c</fullName>
        <description>Residential Installation Project Management
Pat Hevrdejs</description>
        <label>PV Install Promised</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PV_Module_Model__c</fullName>
        <description>Residential Installation Project Management
Pat Hevrdejs</description>
        <label>PV Module Model</label>
        <picklist>
            <picklistValues>
                <fullName>230W (Model SPR-230NE-BLK-D)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>230W (Model SPR-23ONE-BLK-D)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>250W (Model SPR-X20-250-BLK)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>250W (Model SPR-X20-250-BLK-B-AC)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>327W (Model SPR-327NE-WHT-D)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>327W (Model SPR-E20-327-C-AC)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>335W (Model SPR-X21-335-BLK)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>335W (Model SPR-X21-335-BLK-C-AC)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>335W (Model SPR-X21-335-WHT-C-AC)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>345W (Model SPR-X21-345)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>345W (Model SPR-X21-345-C-AC)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>360 WHT (Model SPR-X22-360-WHT-D)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>360W (Model SPR-X22-360-C-AC)</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PermitCostActual__c</fullName>
        <description>Used to capture the actual permit cost.</description>
        <label>Permit Cost $ (Actual)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Permitting_Authority__c</fullName>
        <description>Project Name: Residential Installation Management
Requester: Priti Rastogi
This text entry field is manually populated the EC or Site Surveyor to inform the operations team who the permitting authority is for a given homeowner site, in the event it differs from the AHJ.</description>
        <label>Permitting Authority</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phase__c</fullName>
        <label>Phase</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plan_Type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Plan Type</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Community__c</field>
                <operation>equals</operation>
                <valueField>Plan_Type__c.Community__c</valueField>
            </filterItems>
            <infoMessage>Plan Types for Project&apos;s Community</infoMessage>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Plan_Type__c</referenceTo>
        <relationshipLabel>Projects</relationshipLabel>
        <relationshipName>Residential_Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Primary_Contact_Email__c</fullName>
        <formula>Primary_Contact__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary Contact Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Contact_Method__c</fullName>
        <description>Project Name: Residential Installation Management
Requester: Priti Rastogi
This is a formula field linked to the opportunity record. While this field exists on the opportunity object, it is not exposed to system users. currently exposed to system users, thus it cannot currently be populated.</description>
        <formula>TEXT(Primary_Contact__r.Contact_Method__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary Contact Method</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Contact_Phone_Number__c</fullName>
        <description>Project Name: Residential Installation Management
Requester: Priti Rastogi
This formula field is automatically populated from the opportunity record upon project record creation</description>
        <formula>Primary_Contact__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary Contact Phone Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Project Name: Residential Installation Management
Requester: Priti Rastogi
This look up field is automatically populated from the opportunity record upon project record creation.</description>
        <label>Primary Contact</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.Account__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Residential Projects</relationshipLabel>
        <relationshipName>Residential_Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <description>Project Name: Residential Installation Management
Requester: Priti Rastogi
This pick list field defaults to the &quot;Normal&quot; value upon record creation. Changes to the project priority are made manually by Project Managers on a case-by-case basis.</description>
        <label>Priority</label>
        <picklist>
            <picklistValues>
                <fullName>Normal</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Fast-tracked</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Project_Close_Date__c</fullName>
        <label>Project Close Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Project_Days_Aging__c</fullName>
        <description>Number of days a project has been aging since project creation.</description>
        <formula>NULLVALUE(Project_Close_Date__c, NOW()) - CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Days Aging</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Project_Number__c</fullName>
        <description>Project Name: Residential Installation Management
Requester: Priti Rastogi
This field is auto populated at project record creation and the number is system generated. 
The project number is used to differentiate between projects. Previously project name has been used, which is also the homeowner&apos;s name. As this business scales, homeowner names can duplicate, introducing the potential for project confusion.</description>
        <displayFormat>RP-{00000}</displayFormat>
        <label>Project Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Project_SLA__c</fullName>
        <formula>IF (   ISNULL(Project_Close_Date__c) = True, 
       Now() - CreatedDate,
       Project_Close_Date__c - CreatedDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project SLA</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Project_Task_Max_End_Date__c</fullName>
        <label>Project Task Max End Date</label>
        <summarizedField>Project_Task__c.End_DateTime__c</summarizedField>
        <summaryFilterItems>
            <field>Project_Task__c.Critical_Path__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Project_Task__c.Residential_Project__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Project_Template_Text__c</fullName>
        <formula>Project_Template__r.Name</formula>
        <label>Project Template</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Template__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Project Name: Residential Installation Management 
Requester: Priti Rastogi 
A lookup to the project template, this is used to auto create all the supporting template records and also to keep the template in sync.</description>
        <label>Project Template</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Residential_Project__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Project Template</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Residential_Project__c</referenceTo>
        <relationshipLabel>Residential Projects</relationshipLabel>
        <relationshipName>Residential_Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Proposed_Rate_Plan__c</fullName>
        <description>Residential Installation Project Mgmt
Populated programmatically based on Quote. Rate Description from Electric Rate List based on Rate Code from Electric Rate Usage Input</description>
        <label>Proposed Rate Plan</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Proposed_Solar_Breaker_Installed_in_MSP__c</fullName>
        <description>Residential Installation Project Management
Pat Hevrdejs</description>
        <inlineHelpText>Can proposed solar breaker be installed in MSP (120% Rule)?</inlineHelpText>
        <label>Proposed Solar Breaker MSP (120% Rule)?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Purchase_Order_Number__c</fullName>
        <description>Residential Installation Project Management
Pat Hevrdejs</description>
        <label>Purchase Order Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Purchase_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PO Reference</label>
        <referenceTo>Purchase_Order__c</referenceTo>
        <relationshipLabel>Residential Project</relationshipLabel>
        <relationshipName>Residential_Project</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quote__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Project Name: Residential Installation Management
Requester: Priti Rastogi
This look up field is populated from the quote record at the time of project record creation.
It is a link to the quote associated with the homeowner&apos;s signed contract.</description>
        <label>Quote</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Quote.OpportunityId</field>
                <operation>equals</operation>
                <valueField>$Source.Opportunity__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Quote</referenceTo>
        <relationshipLabel>Residential Projects</relationshipLabel>
        <relationshipName>Residential_Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Rebate_Claim_Notes__c</fullName>
        <description>Residential Installation Project Management
Pat Hevrdejs</description>
        <label>Rebate Claim Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rebate_Reservation_Confirmation_lot__c</fullName>
        <description>Residential Installation Project Management
Pat Hevrdejs</description>
        <label>Rebate Reservation Confirmation # (lot)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>